<resources>
    <string name="app_name">InternProject-Revamp</string>

    <!--Login-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="signup">SignUp</string>
    <string name="add_registered_email_id_to_receive_otp">Add registered email ID to receive OTP</string>
    <string name="send_otp">Send OTP</string>

    <!--Signup-->
    <string name="mobile_number">mobile number</string>
    <string name="confirm_password">Confirm password</string>

    <!--Contacts List-->
    <string name="follow">Follow</string>

    <!--View Profile-->
    <string name="phone">Phone</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="email_view_profile">email</string>
    <string name="address">address</string>
    <string name="view_social_profile">View Social Profile</string>
    <string name="logout">Logout</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit</string>

    <!--Edit Profile-->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company">Company</string>
    <string name="company_name">company name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Postal code</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="new_password">New Password</string>
    <string name="current_password">current Password</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
</resources>