<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/concrete_grey">

    <TextView
        android:id="@+id/tv_forgot_password_title"
        style="@style/TextViewCommonStyle.ForgotPassword"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toTopOf="@id/tv_forgot_password_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_forgot_password_message"
        style="@style/TextViewCommonStyle.ForgotPassword"
        android:layout_marginTop="@dimen/spacing_10"
        android:text="@string/add_registered_email_id_to_receive_otp"
        app:layout_constraintBottom_toTopOf="@id/et_forgot_email_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_title"/>

    <com.example.internproject_revamp.widgets.CLEditText
        android:id="@+id/et_forgot_email_id"
        style="@style/EditTextCommonStyle.EmailAlertStyle"
        android:layout_marginTop="@dimen/spacing_21"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/btn_send_otp_forgot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_message"
        tools:text="abc@gmail.com"/>

    <com.example.internproject_revamp.widgets.CLMaterialButton
        android:id="@+id/btn_cancel_forgot"
        style="@style/MaterialButtonCommonStyle"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn_send_otp_forgot"
        app:layout_constraintEnd_toStartOf="@id/btn_send_otp_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_send_otp_forgot"/>

    <com.example.internproject_revamp.widgets.CLMaterialButton
        android:id="@+id/btn_send_otp_forgot"
        style="@style/MaterialButtonCommonStyle"
        android:layout_marginTop="@dimen/spacing_10"
        android:layout_marginBottom="@dimen/spacing_10"
        android:text="@string/send_otp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel_forgot"
        app:layout_constraintTop_toBottomOf="@id/et_forgot_email_id"/>
</androidx.constraintlayout.widget.ConstraintLayout>