<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tool_bar_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_10"
                android:text="@string/cancel"
                android:textColor="@color/pink"
                android:textSize="@dimen/font_17"
                app:layout_constraintBottom_toBottomOf="@id/tool_bar_constraint_layout"
                app:layout_constraintRight_toLeftOf="@id/tool_bar_tv_signUp"
                app:layout_constraintStart_toStartOf="@id/tool_bar_constraint_layout"
                app:layout_constraintTop_toTopOf="@id/tool_bar_constraint_layout" />

            <TextView
                android:id="@+id/tool_bar_tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_10"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="@dimen/font_17"
                app:layout_constraintBottom_toBottomOf="@id/tool_bar_constraint_layout"
                app:layout_constraintLeft_toRightOf="@id/tv_cancel"
                app:layout_constraintRight_toLeftOf="@id/tv_save"
                app:layout_constraintTop_toTopOf="@id/tool_bar_constraint_layout" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_10"
                android:text="@string/save"
                android:textColor="@color/pink"
                android:textSize="@dimen/font_17"
                app:layout_constraintBottom_toBottomOf="@id/tool_bar_constraint_layout"
                app:layout_constraintEnd_toEndOf="@id/tool_bar_constraint_layout"
                app:layout_constraintLeft_toRightOf="@id/tool_bar_tv_signUp"
                app:layout_constraintTop_toTopOf="@id/tool_bar_constraint_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>