<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/spacing_80"
            android:layout_height="@dimen/spacing_80"
            android:layout_marginTop="@dimen/spacing_70"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/cv_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_15"
            android:layout_marginTop="@dimen/spacing_50"
            app:layout_constraintBottom_toTopOf="@+id/cv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_15">

                <TextView
                    android:id="@+id/tv_userName"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    app:layout_constraintBottom_toTopOf="@+id/tie_userName"
                    app:layout_constraintStart_toStartOf="@+id/cv_username_layout"
                    app:layout_constraintTop_toTopOf="@+id/cv_username_layout"/>

                <com.example.internproject_revamp.widgets.CLEditText
                    android:id="@+id/tie_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="@id/cv_username_layout"
                    app:layout_constraintEnd_toEndOf="@+id/cv_username_layout"
                    app:layout_constraintStart_toStartOf="@+id/tv_userName"
                    app:layout_constraintTop_toBottomOf="@id/tv_userName"
                    tools:text="abc@gmail.com"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/cv_username"
            app:layout_constraintStart_toStartOf="@+id/cv_username"
            app:layout_constraintTop_toBottomOf="@id/cv_username">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_15">

                <TextView
                    android:id="@+id/tv_password"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    app:layout_constraintBottom_toTopOf="@id/tie_password"
                    app:layout_constraintLeft_toLeftOf="@id/cv_password_layout"
                    app:layout_constraintStart_toStartOf="@id/cv_password_layout"
                    app:layout_constraintTop_toTopOf="@id/cv_password_layout"/>

                <com.example.internproject_revamp.widgets.CLEditText
                    android:id="@+id/tie_password"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/password"
                    app:layout_constraintBottom_toBottomOf="@id/cv_password_layout"
                    app:layout_constraintEnd_toEndOf="@id/cv_password_layout"
                    app:layout_constraintStart_toStartOf="@id/cv_password_layout"
                    app:layout_constraintTop_toBottomOf="@id/tv_password"
                    tools:text="Chris-1342"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.example.internproject_revamp.widgets.CLMaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16"
            android:text="@string/login"
            android:textSize="@dimen/font_17"
            app:layout_constraintBottom_toTopOf="@id/tv_forget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_password"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16"
            android:text="@string/forget_password"
            android:textColor="@color/pink"
            android:textSize="@dimen/font_17"
            app:layout_constraintBottom_toTopOf="@id/tv_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16"
            android:text="@string/signup"
            android:textColor="@color/pink"
            android:textSize="@dimen/font_17"
            app:layout_constraintBottom_toTopOf="@id/tv_version_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forget"/>

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_16"
            android:textColor="@color/dustyGray"
            android:textSize="@dimen/font_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signUp"
            tools:text="1.0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>